[package]
name = "tm_chat_server"
version = "0.1.0"
authors = ["druerridge <stopthief@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
clap = "2.33.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"